--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,19 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<tycho-version>0.22.0</tycho-version>
 	</properties>
+	
+	<repositories>
+		<repository>
+			<id>p2-eclipse-kepler</id>
+      		<url>http://download.eclipse.org/releases/kepler</url>
+      		<layout>p2</layout>
+     	</repository>
+		<repository>
+			<id>p2-eclipse-nattable</id>
+      		<url>http://download.eclipse.org/nattable/releases/1.3.0/repository</url>
+      		<layout>p2</layout>
+     	</repository>
+	</repositories>
 
 	<build>
 		<plugins>
