--- a/updatesite/pom.xml
+++ b/updatesite/pom.xml
@@ -5,44 +5,81 @@
 	<artifactId>org.aludratest.eclipse.vde.site</artifactId>
 	<version>0.4.0.qualifier</version>
 	<name>AludraTest Eclipse Visual Data Editor P2 Update Site</name>
-	<description>Generates the P2 Update Site for AludraTest Eclipse Visual Data Editor.</description>
+	<description>Generates the composite P2 Update Site for AludraTest Eclipse Visual Data Editor.</description>
 
-	<packaging>eclipse-repository</packaging>
+	<packaging>pom</packaging>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<tycho-version>0.22.0</tycho-version>
 	</properties>
-	
-	<repositories>
-		<repository>
-			<id>p2-eclipse-kepler</id>
-      		<url>http://download.eclipse.org/releases/kepler</url>
-      		<layout>p2</layout>
-     	</repository>
-		<repository>
-			<id>p2-eclipse-nattable</id>
-      		<url>http://download.eclipse.org/nattable/releases/1.3.0/repository</url>
-      		<layout>p2</layout>
-     	</repository>
-	</repositories>
+
+	<!-- Developer's notice: To add a new version, do not modify this pom.xml. 
+		Create a new subdirectory and copy and adjust files from another subdirectory. 
+		Afterwards, adjust compositeContent.xml and compositeArtifacts.xml. Finally, 
+		add it as a resource in the build configuration below. -->
 
 	<build>
 		<plugins>
+			<!-- copy sub-repositories to target -->
 			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-maven-plugin</artifactId>
-				<version>${tycho-version}</version>
-				<extensions>true</extensions>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.7</version>
+				<executions>
+					<execution>
+						<id>assemble-repositories</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>target/repository</outputDirectory>
+							<resources>
+								<resource>
+									<targetPath>nattable</targetPath>
+									<directory>nattable/target/repository</directory>
+									<filtering>false</filtering>
+								</resource>
+								<resource>
+									<targetPath>0.3.0</targetPath>
+									<directory>0.3.0/target/repository</directory>
+									<filtering>false</filtering>
+								</resource>
+								<resource>
+									<targetPath>0.4.0</targetPath>
+									<directory>0.4.0/target/repository</directory>
+									<filtering>false</filtering>
+								</resource>
+								<resource>
+									<directory>${basedir}</directory>
+									<includes>
+										<include>compositeContent.xml</include>
+										<include>compositeArtifacts.xml</include>
+									</includes>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
-
+			
+			<!-- execute sub-repositories package -->
 			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-p2-repository-plugin</artifactId>
-				<version>${tycho-version}</version>
-				<configuration>
-					<includeAllDependencies>false</includeAllDependencies>
-				</configuration>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-invoker-plugin</artifactId>
+				<version>1.10</version>
+				<executions>
+					<execution>
+						<id>package-repositories</id>
+						<phase>prepare-package</phase>
+						<goals><goal>run</goal></goals>
+						<configuration>
+							<failIfNoProjects>true</failIfNoProjects>
+							<projectsDirectory>${basedir}</projectsDirectory>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
@@ -62,7 +99,7 @@
 							<skip>true</skip>
 						</configuration>
 					</plugin>
-					
+
 					<plugin>
 						<groupId>com.github.github</groupId>
 						<artifactId>site-maven-plugin</artifactId>
@@ -77,7 +114,8 @@
 						</dependencies>
 						<configuration>
 							<server>github</server>
-							<message>Deploying update site for ${project.artifactId} ${project.version}</message>
+							<message>Deploying update site for ${project.artifactId}
+								${project.version}</message>
 							<repositoryOwner>AludraTest</repositoryOwner>
 							<repositoryName>aludratest-eclipse-plugin</repositoryName>
 							<outputDirectory>target/repository</outputDirectory>
