Now using released version of AludraTest 3.0.0

--- a/build.properties
+++ b/build.properties
@@ -6,6 +6,6 @@ bin.includes = plugin.xml,\
                .,\
                icons/,\
                lib/databene-commons-1.0.5.jar,\
-               lib/aludratest-3.0.0-SNAPSHOT.jar,\
                lib/databene-formats-1.0.3.jar,\
-               xsdSchema/
+               xsdSchema/,\
+               lib/aludratest-3.0.0.jar
