--- a/updatesite/pom.xml
+++ b/updatesite/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.aludratest.eclipse</groupId>
 	<artifactId>org.aludratest.eclipse.vde.site</artifactId>
-	<version>0.5.2.qualifier</version>
+	<version>0.5.4.qualifier</version>
 	<name>AludraTest Eclipse Visual Data Editor P2 Update Site</name>
 	<description>Generates the composite P2 Update Site for AludraTest Eclipse Visual Data Editor.</description>
 
@@ -66,6 +66,7 @@
 									<directory>0.5.2/target/repository</directory>
 									<filtering>false</filtering>
 								</resource>
+								<!-- insert new folders here -->
 								<resource>
 									<directory>${basedir}</directory>
 									<includes>
