--- a/updatesite/pom.xml
+++ b/updatesite/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.aludratest.eclipse</groupId>
 	<artifactId>org.aludratest.eclipse.vde.site</artifactId>
-	<version>0.5.4.qualifier</version>
+	<version>0.6.0.qualifier</version>
 	<name>AludraTest Eclipse Visual Data Editor P2 Update Site</name>
 	<description>Generates the composite P2 Update Site for AludraTest Eclipse Visual Data Editor.</description>
 
@@ -69,6 +69,11 @@
 								<resource>
 									<targetPath>0.5.4</targetPath>
 									<directory>0.5.4/target/repository</directory>
+									<filtering>false</filtering>
+								</resource>
+								<resource>
+									<targetPath>0.6.0</targetPath>
+									<directory>0.6.0/target/repository</directory>
 									<filtering>false</filtering>
 								</resource>
 								<!-- insert new folders here -->
