--- a/build.properties
+++ b/build.properties
@@ -8,4 +8,6 @@ bin.includes = plugin.xml,\
                lib/databene-commons-1.0.5.jar,\
                lib/databene-formats-1.0.3.jar,\
                xsdSchema/,\
-               lib/aludratest-3.0.0.jar
+               lib/aludratest-3.0.0.jar,\
+               lib/rhino-1.7.6.jar,\
+               lib/rhino-1.7R5.jar
