--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.aludratest.eclipse</groupId>
@@ -14,18 +13,18 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<tycho-version>0.22.0</tycho-version>
 	</properties>
-	
+
 	<repositories>
 		<repository>
 			<id>p2-eclipse-kepler</id>
-      		<url>http://download.eclipse.org/releases/kepler</url>
-      		<layout>p2</layout>
-     	</repository>
+			<url>http://download.eclipse.org/releases/kepler</url>
+			<layout>p2</layout>
+		</repository>
 		<repository>
 			<id>p2-eclipse-nattable</id>
-      		<url>http://download.eclipse.org/nattable/releases/1.3.0/repository</url>
-      		<layout>p2</layout>
-     	</repository>
+			<url>http://download.eclipse.org/nattable/releases/1.3.0/repository</url>
+			<layout>p2</layout>
+		</repository>
 	</repositories>
 
 	<build>
@@ -75,6 +74,16 @@
 									<groupId>org.databene</groupId>
 									<artifactId>databene-formats</artifactId>
 									<version>1.0.3</version>
+								</artifactItem>
+								<artifactItem>
+									<groupId>org.databene</groupId>
+									<artifactId>databene-formats</artifactId>
+									<version>1.0.3</version>
+								</artifactItem>
+								<artifactItem>
+									<groupId>org.mozilla</groupId>
+									<artifactId>rhino</artifactId>
+									<version>1.7R5</version>
 								</artifactItem>
 							</artifactItems>
 							<outputDirectory>lib</outputDirectory>
