--- a/updatesite/0.6.4/pom.xml
+++ b/updatesite/0.6.4/pom.xml
@@ -1,15 +1,13 @@
-<project 
-xmlns="http://maven.apache.org/POM/4.0.0" 
-xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.aludratest.eclipse</groupId>
-	<artifactId>org.aludratest.eclipse.vde.feature</artifactId>
+	<artifactId>org.aludratest.eclipse.vde.site.version064</artifactId>
 	<version>0.6.4.qualifier</version>
-	<name>AludraTest Eclipse Visual Data Editor P2 Feature</name>
-	<description>The Eclipse Feature for the AludraTest Visual Data Editor.</description>
+	<name>AludraTest VDE 0.6.4 Update Site</name>
+	<description>Generates the P2 Update Site for AludraTest Eclipse Visual Data Editor.</description>
 
-	<packaging>eclipse-feature</packaging>
+	<packaging>eclipse-repository</packaging>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -27,6 +25,12 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       		<url>http://download.eclipse.org/nattable/releases/1.3.0/repository</url>
       		<layout>p2</layout>
      	</repository>
+     	<!-- also include already existing AludraTest update site for previous releases (features) -->
+     	<repository>
+     		<id>p2-eclipse-aludratest</id>
+     		<url>http://aludratest.github.io/aludratest-eclipse-plugin/updatesite</url>
+     		<layout>p2</layout>
+     	</repository>
 	</repositories>
 
 	<build>
@@ -36,6 +40,15 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 				<artifactId>tycho-maven-plugin</artifactId>
 				<version>${tycho-version}</version>
 				<extensions>true</extensions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-p2-repository-plugin</artifactId>
+				<version>${tycho-version}</version>
+				<configuration>
+					<includeAllDependencies>false</includeAllDependencies>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
