--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry exported="true" kind="lib" path="lib/rhino-1.7R5.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/aludratest-3.0.0.jar"/>
+	<classpathentry kind="lib" path="lib/aludratest-3.0.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/databene-commons-1.0.5.jar"/>
 	<classpathentry kind="lib" path="lib/databene-formats-1.0.3.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
